--- a/InternetCafe.Infrastructure/InternetCafe.Infrastructure.csproj
+++ b/InternetCafe.Infrastructure/InternetCafe.Infrastructure.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Identity\" />
+    <Folder Include="Logging\" />
+    <Folder Include="Services\" />
+    <Folder Include="Persistence\" />
+  </ItemGroup>
+
 </Project>
