--- a/InternetCafe.Infrastructure/InternetCafe.Infrastructure.csproj
+++ b/InternetCafe.Infrastructure/InternetCafe.Infrastructure.csproj
@@ -7,10 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
     <Folder Include="Identity\" />
     <Folder Include="Logging\" />
     <Folder Include="Services\" />
-    <Folder Include="Persistence\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\InternetCafe.Domain\InternetCafe.Domain.csproj" />
   </ItemGroup>
 
 </Project>
