remove jwt service + chane configuration

--- a/InternetCafe.API/appsettings.json
+++ b/InternetCafe.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "defaultConnection": "Server=DESKTOP-12BABDK;Database=Internet_Cafe;User ID=sa;Password=1;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
