--- a/InternetCafe.API/appsettings.json
+++ b/InternetCafe.API/appsettings.json
@@ -7,6 +7,17 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "defaultConnection": "Server=DESKTOP-12BABDK;Database=Internet_Cafe;User ID=sa;Password=1;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-12BABDK;Database=Internet_Cafe;User ID=sa;Password=1;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Authentication": {
+    "SecretKey": "InternetCafe_VerySecureJwtSecretKey_MinLength32Chars",
+    "Issuer": "InternetCafeApi",
+    "Audience": "InternetCafeClient",
+    "TokenExpirationInMinutes": 60,
+    "RefreshTokenExpirationInDays": 7,
+    "ValidateIssuer": true,
+    "ValidateAudience": true,
+    "ValidateLifetime": true,
+    "ValidateIssuerSigningKey": true
   }
 }
